--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <h1>Hello Calculator!</h1>
-<p>Input something like <code>1 + 1</code>.</p>
-<p>This calculator supports <code>+-*/^()</code>,
-    whitespaces, and integers and floating numbers.</p>
-<input id="formula" value="1 + 2.0 * 3.1 / (4 ^ 5.6)"/>
-<div id="result"></div>
+<br>
+<input id="html_input" value=""/>
+<div id="html_output"></div>
+
+
 </body>
 <script>
     require('./renderer.js')
