electron + python still working

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,11 @@
     <title>Hello Calculator!</title>
 </head>
 <body>
+
 <h1>Hello Calculator!</h1>
 <br>
-<input id="html_input" value=""/>
+<input id="html_address" value=""/>
 <div id="html_output"></div>
-
 
 </body>
 <script>
