--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Hello Calculator!</title>ho
+        <title>Hello Calculator!</title>
     </head>
 <body>
     <div>
@@ -16,6 +16,13 @@
         <div id="tag_list"></div>
     </div>
     <hr>
+
+    <div>
+        <p>stack trace</p>
+        <div id="stack_trace"></div>
+    </div>
+    <hr>
+
     <div>
         <input id="tag_number" value=""/>
         <button id="go">go</button>
