--- a/app/pyside/test/punning_html.html
+++ b/app/pyside/test/punning_html.html
@@ -1,1 +1,1 @@
-<html><body><td class="subject"> <a href="http://bbs.ruliweb.com/best/board/300143/read/34465810">가정용 self 친자확인 키트.jpg</a> <span class="num_reply"> (<span class="num">13</span>)</span> </td></body></html>
+<html><body><td class="subject"> <a href="http://bbs.ruliweb.com/best/board/300143/read/34482664">어느 사이트의 유학생 배틀.battle</a> <span class="num_reply"> (<span class="num">22</span>)</span> </td></body></html>
