add electron connect to pyserver doing test util....

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
 <body>
     <div>
         <p>html address</p>
-        <input id="html_address" value=""/>
+        <input id="url" value="http://bbs.ruliweb.com/best/humor"/>
+        <button id="btn_set_url">set url</button>
     </div>
     <hr>
     <div>
@@ -22,6 +23,13 @@
         <div id="stack_trace"></div>
     </div>
     <hr>
+
+    <div>
+        <p>filter list </p>
+        <div id="filter_list"></div>
+    </div>
+    <hr>
+
 
     <div>
         <input id="tag_number" value=""/>
