--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body class="fixed-nav" id="page-top">
+<body class="fixed-nav sidenav-toggled" id="page-top">
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
