--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--TODO add each card collapse btn-->
 <head>
 
     <meta charset="utf-8">
@@ -178,7 +178,6 @@
                 </div>
             </div>
 
-
             <!-- parse form -->
             <div class="col-lg-4 col-md-8">
                 <div class="card mb-3">
@@ -205,6 +204,12 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
+                    <div class="card-body-inside-margin-bottom">
+                        <button class="btn btn-primary" type="button" id="moveParent">move Parent</button>
+                        <button class="btn btn-primary" type="button" id="moveRoot">move Root</button>
+                    </div>
+
+
                     <table class="table table-bordered" width="100%" cellspacing="0">
                         <thead>
                         <tr>
@@ -240,7 +245,7 @@
             </div>
         </div>
 
-        <!-- target url-->
+        <!-- target html output -->
         <div class="card mb-3">
             <div class="card-header">
                 <i class="fa fa-html5"></i>
@@ -250,7 +255,34 @@
                 <div id="outputHTML">
 
                 </div>
+            </div>
+        </div>
 
+        <!-- sibling output table -->
+        <div class="card mb-3">
+            <div class="card-header">
+                <i class="fa fa-table"></i>
+                Sibling Table
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" width="100%" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th class="table-item-slim">tag</th>
+                            <th class="table-item-slim">attr</th>
+                            <th >text</th>
+                        </tr>
+                        </thead>
+                        <tbody id="siblingTableBody">
+                        <tr>
+                            <td>$205,500</td>
+                            <td>$205,500</td>
+                            <td>$205,500</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
